--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native": "0.73.5",
     "react-native-gesture-handler": "~2.15.0",
     "react-native-web": "~0.19.10",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
