--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
     "expo": "~50.0.11",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
+    "native-base": "^3.4.28",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
@@ -25,7 +27,8 @@
     "react-native-gesture-handler": "~2.15.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.1.8",
-    "expo-image-picker": "~14.7.1"
+    "react-native-svg": "14.1.0",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
