--- a/package.json
+++ b/package.json
@@ -19,16 +19,13 @@
     "expo": "~50.0.11",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
-    "native-base": "^3.4.28",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.5",
     "react-native-gesture-handler": "~2.15.0",
     "react-native-web": "~0.19.10",
-    "styled-components": "^6.1.8",
-    "react-native-svg": "14.1.0",
-    "react-native-safe-area-context": "4.8.2"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
