--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.73.5",
     "react-native-gesture-handler": "~2.15.0",
     "react-native-web": "~0.19.10",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
