--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.11",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
@@ -26,8 +27,8 @@
     "react-native": "0.73.5",
     "react-native-gesture-handler": "~2.15.0",
     "react-native-web": "~0.19.10",
-    "react-toastify": "^10.0.5",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
