--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@dotlottie/react-player": "^1.6.19",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.14",
@@ -18,23 +20,24 @@
     "@react-navigation/stack": "^6.3.25",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "expo": "~50.0.11",
-    "expo-image-picker": "~14.7.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.10",
+    "expo-image-picker": "~15.0.5",
+    "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-native": "0.73.5",
-    "react-native-gesture-handler": "~2.15.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.1.8",
-    "@react-native-community/datetimepicker": "7.6.1"
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@types/react": "~18.2.64",
+    "@types/react": "~18.2.79",
     "@types/styled-components": "^5.1.34",
-    "typescript": "^5.4.2"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
