--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start",
     "start:tunnel": "expo start --tunnel",
-    "android": "expo start --android",
+    "android": "expo start --tunnel --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
